--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 # action.yml
-name: 'renat_base7_action'
+name: 'renat-base7-action'
 description: 'Image for RENAT container based on CentOS 7'
 runs:
   using: 'docker'
