--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,9 +33,6 @@ jobs:
           echo test, and deploy your project.
 
       - name: Test01
-        uses: ./
+        uses: ./tests/test01
         with: 
             renat-base7-action: '' 
-        run: |
-            uname -a
-            whoai
