--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,6 @@ jobs:
           echo test, and deploy your project.
 
       - name: Test01
-        uses: ./tests/test01
+        uses: ./
         with: 
             renat-base7-action: '' 
