--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,6 +25,8 @@ jobs:
 
       # Runs RENAT tests
       - name: Run RENAT test
+        env:
+            DCOKET_BUILDKIT: 1
         # use action.yml inside the root directory (local action)
         uses: ./
         with:
