--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
         with:
             username: ${{ github.actor }}
             password: ${{ secrets.DOCKER_PASSWORD }}
-            repository: ghcr.io
+            registry: ghcr.io
             repository: bachng2017/renat_base7_action
             tags: latest
             cache_froms: bachng2017/renat_base7_action:latest
