--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v2
         with:
-            # push: true
-            load: true
+            push: true
+            # load: true
             tags: bachng2017/renat_base7_action:latest
             cache-from: type=registry,ref=bachng2017/renat_base7_action:latest
             cache-to: type=inline
