--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,6 +24,14 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      -
+        name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -38,5 +46,7 @@ jobs:
             push: true
             # load: true
             tags: bachng2017/renat_base7_action:latest
-            cache-from: type=registry,ref=bachng2017/renat_base7_action:latest
-            cache-to: type=inline
+            # cache-from: type=registry,ref=bachng2017/renat_base7_action:latest
+            # cache-to: type=inline
+            cache-from: type=local,src=/tmp/.buildx-cache
+            cache-to: type=local,dest=/tmp/.buildx-cache
