--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,7 +45,7 @@ jobs:
         with:
             push: true
             # load: true
-            tags: bachng2017/renat_base7_action:latest
+            tags: ghcr.io/bachng2017/renat_base7_action:latest
             # cache-from: type=registry,ref=bachng2017/renat_base7_action:latest
             # cache-to: type=inline
             cache-from: type=local,src=/tmp/.buildx-cache
