--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,7 +44,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
             push: true
-            # load: true
+            load: false
             tags: ghcr.io/bachng2017/renat_base7_action:latest
             # cache-from: type=registry,ref=bachng2017/renat_base7_action:latest
             # cache-to: type=inline
