--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,5 +48,5 @@ jobs:
             tags: ghcr.io/bachng2017/renat_base7_action:latest
             # cache-from: type=registry,ref=bachng2017/renat_base7_action:latest
             # cache-to: type=inline
-            cache-from: type=registry,src=/tmp/.buildx-cache
-            cache-to: mode=max,type=registry,dest=/tmp/.buildx-cache
+            cache-from: type=local,src=/tmp/.buildx-cache
+            cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
