and build and run

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,13 +40,20 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Build and Run
+        uses: docker/build-push-action@v2
+        with:
+            push: false
+            load: true
+            tags: ghcr.io/bachng2017/renat_base7_action:latest
+            cache-from: type=local,src=/tmp/.buildx-cache
+            cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
+
       - name: Build and Push
         uses: docker/build-push-action@v2
         with:
             push: true
             load: false
             tags: ghcr.io/bachng2017/renat_base7_action:latest
-            # cache-from: type=registry,ref=bachng2017/renat_base7_action:latest
-            # cache-to: type=inline
             cache-from: type=local,src=/tmp/.buildx-cache
             cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
