--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,9 +50,9 @@ jobs:
             cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
 
       - 
-        run: docker run ghcr.io/bachng2017/renat_base7_action:latest
-      - 
-        run: docker exec ghcr.io/bachng2017/renat_base7_action:latest
+        uses: ghcr.io/bachng2017/renat_base7_action:latest
+        with:
+            args: ./entrypoint.sh 
 
       - name: Build and Push
         uses: docker/build-push-action@v2
