--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,6 +49,9 @@ jobs:
             cache-from: type=local,src=/tmp/.buildx-cache
             cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
 
+      -
+        run: ls -a
+
       - 
         run: docker run -v ${{ github.action_path }}:/github -w "/github/renat_base7_action" --entrypoint=entrypoint.sh ghcr.io/bachng2017/renat_base7_action:latest
 
