--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,7 +53,7 @@ jobs:
         run: ls -a
 
       - 
-        run: docker run -v ${{ github.action_path }}:/github -w "/github/renat_base7_action" --entrypoint=entrypoint.sh ghcr.io/bachng2017/renat_base7_action:latest
+        run: docker run -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE -w $GITHUB_WORKSPACE --entrypoint=entrypoint.sh ghcr.io/bachng2017/renat_base7_action:latest
 
       - name: Build and Push
         uses: docker/build-push-action@v2
