--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,7 +59,7 @@ jobs:
         run: ls -a $GITHUB_WORKSPACE
 
       - name: Run tests
-        run: docker run -e GITHUB_WORKSPACE -v "$GITHUB_WORKSPACE:/github/workspace" -w "/github/workspace" --entrypoint="./entrypoint.sh" ghcr.io/bachng2017/renat_base7_action:latest
+        run: docker run -e GITHUB_WORKSPACE=/github/workspace -v "$GITHUB_WORKSPACE:/github/workspace" -w "/github/workspace" --entrypoint="./entrypoint.sh" ghcr.io/bachng2017/renat_base7_action:latest
 
       - name: Build and Push
         uses: docker/build-push-action@v2
