--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,6 +24,12 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+
+      - name: Checkout RENAT
+        use: actions/checkout@v2
+        with:
+            repository: https://github.com/bachng2017/RENAT.git
+            path: renat
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
