--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Checkout RENAT
-        use: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
             repository: https://github.com/bachng2017/RENAT.git
             path: renat
