--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,12 +23,13 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Checkout RENAT
         uses: actions/checkout@v2
         with:
-            repository: bachng2017/RENAT.git
+            repository: bachng2017/RENAT
             path: renat
       -
         name: Set up Docker Buildx
