--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,13 +7,16 @@ name: CI
 on:
   push:
     branches: [ master ]
+    paths:
+    - 'Dockerfile'
   pull_request:
     branches: [ master ]
+  
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build-and-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -62,7 +65,7 @@ jobs:
       - name: Run Tests
         run: docker run -e GITHUB_WORKSPACE=/github/workspace -v "$GITHUB_WORKSPACE:/github/workspace" -w "/github/workspace" --entrypoint="./entrypoint.sh" ghcr.io/bachng2017/renat_base7_action:latest
 
-      - name: Build and Push
+      - name: Build and Push (Github repository)
         uses: docker/build-push-action@v2
         with:
             push: true
@@ -70,3 +73,22 @@ jobs:
             tags: ghcr.io/bachng2017/renat_base7_action:latest
             cache-from: type=local,src=/tmp/.buildx-cache
             cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
+
+   publish:
+    needs: [build-and-test]
+    runs-on: ubuntu-latest
+    if: ${{ false }}
+    env:
+        GITHUB_WORKSPACE: ${{ github.workspace }}
+    
+    steps: 
+      - name: Build and Push (Dockerhub repository)
+        uses: docker/build-push-action@v2
+        with:
+            push: true
+            load: false
+            username: bachng
+            password: ${{ secrets.DOCKER_PASSWORD }}
+            tags: bachng/renat:latest
+
+    
