--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,8 @@ jobs:
   build-and-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    outputs:
+        output: ${{ steps.changes.files }}
 
     env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
@@ -73,13 +75,14 @@ jobs:
             cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
 
       - name: Get changed files
-        run: echo '::set-output name=CHANGED_FILES::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})' 
+        id: changes
+        run: echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
 
   # only trigger this job when Docker file is changed
   publish:
     needs: [build-and-test]
+    if: ${{ needs.build-and-test.output == "Dockerfile" }}
     runs-on: ubuntu-latest
-    if: ${{ false }}
     env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
     
