--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Get changed files
         id: changes
-        run: echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
+        run: echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }}\n"
 
   # only trigger this job when Docker file is changed
   publish:
