--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     outputs:
-        output: ${{ steps.changes.files }}
+        files: ${{ steps.changes.files }}
 
     env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
@@ -99,4 +99,4 @@ jobs:
 #             tags: bachng/renat:latest
 
         -
-          run: echo ${{ needs.build-and-test.output}}
+          run: echo ${{ needs.build-and-test.outputs.files }}
