--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: main CI flow
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -18,7 +18,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     outputs:
-        files: ${{ steps.get_file.outputs.files }}
+        files: ${{ steps.checkout.outputs.files }}
 
     env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
@@ -28,6 +28,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
         uses: actions/checkout@v2
+        id: checkout
+        run: |
+            files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})
+            echo ::set-output name=files::$files
 
       - name: Checkout RENAT
         uses: actions/checkout@v2
@@ -73,12 +77,6 @@ jobs:
             tags: ghcr.io/bachng2017/renat_base7_action:latest
             cache-from: type=local,src=/tmp/.buildx-cache
             cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
-
-      - name: Get changed files
-        id: get_files
-        run: |
-            files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})
-            echo ::set-output name=files::$files
 
   # only trigger this job when Docker file is changed
   publish:
