--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,7 @@ jobs:
         id: change
         run: |
             set files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})
+            echo $files
             echo ::set-output name=files::$files
 
       - name: Checkout RENAT
