--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,9 +32,7 @@ jobs:
       - name: Collect changed files
         id: change
         run: |
-            set files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})
-            echo $files
-            echo ::set-output name=files::$files
+            echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
 
       - name: Checkout RENAT
         uses: actions/checkout@v2
