--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     outputs:
-        files: ${{ steps.change.outputs.files }}
+        files: ${{ steps.change.outputs.diff }}
 
     env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
@@ -32,7 +32,7 @@ jobs:
       - name: Collect changed files
         id: change
         run: |
-            echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
+            echo "::set-output name=diff::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
 
       - name: Checkout RENAT
         uses: actions/checkout@v2
@@ -81,7 +81,7 @@ jobs:
 
   # only trigger this job when Docker file is changed
   publish:
-    needs: [build-and-test]
+    needs: build-and-test
 #    if: ${{ needs.build-and-test.outputs.files == 'Dockerfile' }}
     runs-on: ubuntu-latest
     env:
