--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Collect changed files
         id: change
         run: |
-            echo "::set-output name=diff::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
+            # echo "::set-output name=diff::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
+            echo "::set-output name=diff::xxx"
 
       - name: Checkout RENAT
         uses: actions/checkout@v2
