--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Collect changed files
         id: change
         run: |
-            git diff-tree --no-commit-id --name-only -r ${{ github.sha }}
-            # echo "::set-output name=diff::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
-            echo "::set-output name=diff::xxx"
+            ls -la
+            /usr/bin/git diff-tree --no-commit-id --name-only -r ${{ github.sha }}
+            echo "::set-output name=diff::$(/usr/bin/git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
 
       - name: Checkout RENAT
         uses: actions/checkout@v2
