--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     outputs:
-        files: ${{ steps.change.outputs.diff }}
+        files: 
+            value: ${{ steps.change.outputs.diff }}
 
     env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
@@ -32,7 +33,7 @@ jobs:
       - name: Collect changed files
         id: change
         run: |
-            echo ::set-output name=diff::xxx
+            echo ::set-output name=diff::$(whoami)
 
       - name: Checkout RENAT
         uses: actions/checkout@v2
