--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,9 +17,7 @@ jobs:
   build-and-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    outputs:
-        files: 
-            value: ${{ steps.change.outputs.diff }}
+    outputs: ${{ steps.change.outputs.diff }}
 
     env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
