--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,8 @@ jobs:
   build-and-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    outputs: ${{ steps.change.outputs.diff }}
+    outputs: 
+        files: ${{ steps.change.outputs.diff }}
 
     env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
