--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,13 +53,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
-
       - name: Build and Load
         uses: docker/build-push-action@v2
         with:
@@ -72,34 +65,18 @@ jobs:
       - name: Run Tests
         run: docker run -e GITHUB_WORKSPACE=/github/workspace -v "$GITHUB_WORKSPACE:/github/workspace" -w "/github/workspace" --entrypoint="./entrypoint.sh" ghcr.io/bachng2017/renat_base7_action:latest
 
-      - name: Build and Push (Github repository)
-        uses: docker/build-push-action@v2
-        with:
-            push: true
-            load: false
-            tags: ghcr.io/bachng2017/renat_base7_action:latest
-            cache-from: type=local,src=/tmp/.buildx-cache
-            cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
-
-  # only trigger this job when Docker file is changed
-  publish:
-    needs: build-and-test
-    if: ${{ needs.build-and-test.outputs.files == 'Dockerfile' }}
-    runs-on: ubuntu-latest
-    env:
-        GITHUB_WORKSPACE: ${{ github.workspace }}
-    
-    steps: 
-      - name: Login to Dockerhub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           username: bachng
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push (Dockerhub repository)
+      - name: Build and Push (Dockerhup repository)
+        if: ${{ needs.build-and-test.outputs.files == 'Dockerfile' }}
         uses: docker/build-push-action@v2
         with:
             push: true
             load: false
+            tags: bachng2017/renat_base7_action:latest
             cache-from: type=local,src=/tmp/.buildx-cache
-            tags: bachng/renat:latest
+
