--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,6 +42,20 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: bachng
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Login to Dockerhub
+        uses: docker/login-action@v1
+        with:
+          username: bachng
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       -
         name: Cache Docker layers
         uses: actions/cache@v2
@@ -63,18 +77,14 @@ jobs:
       - name: Run Tests
         run: docker run -e GITHUB_WORKSPACE=/github/workspace -v "$GITHUB_WORKSPACE:/github/workspace" -w "/github/workspace" --entrypoint="./entrypoint.sh" ghcr.io/bachng2017/renat_base7_action:latest
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          username: bachng
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and Push (Dockerhub repository)
+      - name: Build and Push 
         if: ${{ steps.change.outputs.diff == 'Dockerfile' }}
         uses: docker/build-push-action@v2
         with:
             push: true
             load: false
-            tags: bachng2017/renat_base7_action:latest
+            tags: |
+                ghcr.io/bachng2017/renat_base7_action:latest
+                bachng2017/renat_base7_action:latest
             cache-from: type=local,src=/tmp/.buildx-cache
 
