--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -47,8 +47,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: bachng
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
 
       - name: Login to Dockerhub
         uses: docker/login-action@v1
