--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -72,7 +72,7 @@ jobs:
             load: true
             tags: ghcr.io/bachng2017/renat_base7:latest
             cache-from: type=local,src=/tmp/.buildx-cache
-            cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
+            # cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
 
       - name: Run Tests
         run: docker run -e GITHUB_WORKSPACE=/github/workspace -v "$GITHUB_WORKSPACE:/github/workspace" -w "/github/workspace" --entrypoint="./entrypoint.sh" ghcr.io/bachng2017/renat_base7:latest
