--- a/files/requirements.txt
+++ b/files/requirements.txt
@@ -39,7 +39,7 @@ pytz==2018.5
 pyvim==2.0.22
 PyVirtualDisplay==0.2.1
 pyvmomi==6.7.0.2018.9
-PyYAML==3.13
+PyYAML==4.2b1
 requests==2.19.1
 robotframework==3.1.1
 robotframework-selenium2library==3.0.0
