--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v2
         with:
             repository: bachng2017/RENAT
-            path: renat
+            path: renat_project
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -75,10 +75,11 @@ jobs:
             # cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
 
       - name: Run Tests
-        run: docker run -e GITHUB_WORKSPACE=/github/workspace -v "$GITHUB_WORKSPACE:/github/workspace" -w "/github/workspace" --entrypoint="./entrypoint.sh" ghcr.io/bachng2017/renat_base7:latest
+        # run: docker run -e GITHUB_WORKSPACE=/github/workspace -v "$GITHUB_WORKSPACE:/github/workspace" -w "/github/workspace" --entrypoint="./entrypoint.sh" ghcr.io/bachng2017/renat_base7:latest
+        run: docker-compose up -e GITHUB_WORKSPACE=/github/workspace -v "$GITHUB_WORKSPACE:/github/workspace" -w "/github/workspace" --exit-code-from test_renat
 
       - name: Build and Push 
-        if: ${{ steps.change.outputs.diff == 'Dockerfile' }}
+        if: ${{ steps.change.outputs.diff == 'renat/Dockerfile' }}
         uses: docker/build-push-action@v2
         with:
             push: true
