--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -70,6 +70,7 @@ jobs:
         with:
             push: false
             load: true
+            file: renat/Dockerfile
             tags: ghcr.io/bachng2017/renat_base7:latest
             cache-from: type=local,src=/tmp/.buildx-cache
             # cache-to: mode=max,type=local,dest=/tmp/.buildx-cache
