--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
             - "router2"
         build:
             context: renat 
+            image: ghcr.io/bachng2017/renat_base7:latest
         volumes:
             - ./renat_project:/home/robot/work/renat
             - ./renat/config:/home/robot/work/renat/config
