--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,8 +7,10 @@ name: main CI flow
 on:
   push:
     branches: [ master ]
+    paths: renat/*
   pull_request:
     branches: [ master ]
+    paths: renat/*
   
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -29,11 +31,11 @@ jobs:
         with:
             fetch-depth: 0
 
-      - name: Check Dockerfile
-        id: change
-        run: |
-            echo ::set-output name=diff::$(/usr/bin/git diff --name-only ${{ github.event.before }}..${{ github.event.after }} | grep renat/Dockerfile)
-            echo "Change was : $(/usr/bin/git diff --name-only ${{ github.event.before }}..${{ github.event.after }})"
+#       - name: Check Dockerfile
+#         id: change
+#         run: |
+#             echo ::set-output name=diff::$(/usr/bin/git diff --name-only ${{ github.event.before }}..${{ github.event.after }} | grep renat/Dockerfile)
+#             echo "Change was : $(/usr/bin/git diff --name-only ${{ github.event.before }}..${{ github.event.after }})"
 
       - name: Checkout RENAT
         uses: actions/checkout@v2
@@ -81,7 +83,7 @@ jobs:
         run: docker-compose up --exit-code-from test_renat
 
       - name: Build and Push 
-        if: ${{ steps.change.outputs.diff == 'renat/Dockerfile' }}
+#        if: ${{ steps.change.outputs.diff == 'renat/Dockerfile' }}
         uses: docker/build-push-action@v2
         with:
             push: true
