--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,12 @@ jobs:
         uses: actions/checkout@v2
         with:
             fetch-depth: 0
+
+      - name: Get timestamp
+        id: time_stamp
+        run: |
+            echo ::set-output name=value::$(date "+%Y%m%d_%H%M%S")
+
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
